--- a/FrameworksyLibreriasCSS/Materialize/Ejercicios Rejillas/index.html
+++ b/FrameworksyLibreriasCSS/Materialize/Ejercicios Rejillas/index.html
@@ -15,22 +15,34 @@
     <script type="text/javascript" src="js/materialize.min.js"></script>
 
     <div class="row">
-      <div class="col s12 orange barra-superior">
+      <div class="col s12 orange barra-superior" >
         <h5>Barra de encabezado y búsqueda</h5>
       </div>
 
-      <div class="col s2 blue-grey lighten-5 columna-grupos">
+      <div class="col s2 m2 l2 blue-grey lighten-5 columna-grupos push-s10">
         <span>Columna para los grupos</span>
       </div>
 
-      <div class="col s10 m7 l7 white columna-principal">
+      <div class="col s10 m7 l7 white columna-principal pull-s2">
         <div class="row">
-
-
+          <div class="col s12 m12 l8 white columna-publicaciones">
+            <h5>Columna para las publicaciones</h5>
+          </div>
+          <div class="col l3 white columna-noticias offset-l1 hide-on-med-and-down">
+            <h5>Columna para las noticias</h5>
+          </div>
         </div>
-
       </div>
-
+      <div class="col m3 l3 white columna-chat hide-on-small-only">
+        <div class="row">
+          <div class="col s12 blue-grey bloque-actividades">
+            <h5>Bloque para las actividades recientes</h5>
+          </div>
+          <div class="col s12 blue-grey lighten-4 bloque-chat">
+            <h5>Bloque para el chat</h5>
+          </div>
+        </div>
+      </div>
 
     </div>
 
