--- a/FrameworksyLibreriasCSS/Materialize/materialize_alinecion_formato/index.html
+++ b/FrameworksyLibreriasCSS/Materialize/materialize_alinecion_formato/index.html
@@ -11,12 +11,22 @@
     <title>Propiedades de alineación de texto</title>
   </head>
   <body>
-    <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-    <script type="text/javascript" src="js/materialize.min.js"></script>
-
-    <div class="valign-wrapper" id="contenedor_vertical">
+    <div class="valign-wrapper"  id="contenedor_vertical">
       <h5 class="valign right-align hide-on-small-only">Este texto se centrará verticalmente.</h5>
     </div>
 
-  </body>
+    <div class="row">
+      <div class="col s4 m6 l10">
+        <div class="card hoverable">
+          <h4 class="truncate">"Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"</h4>
+
+        </div>
+      </div>
+
+    </div>
+
+    <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <script type="text/javascript" src="js/materialize.min.js"></script>
+
+    </body>
 </html>
