--- a/FrameworksyLibreriasCSS/Materialize/Ejerc_VisibilidadPosicionamientoMedia/index.html
+++ b/FrameworksyLibreriasCSS/Materialize/Ejerc_VisibilidadPosicionamientoMedia/index.html
@@ -13,15 +13,23 @@
   <body>
     <div class="row">
       <div class="s12 col amber darken-3 barra-superior">
-        <h5>Barra de encabezado y búsqueda</h5>
+        <img src="img/browser.png" alt="ShareUrCode" class="logo"/>
       </div>
       <div class="s2 m2 l2 col blue-grey lighten-5 columna-grupos push-s10">
         <span>Columna para los grupos</span>
       </div>
-      <div class="s10 m7 l7 col white columna-principal pull-s2">
+      <div class="s10 m7 l7 col white columna-principal pull-s2 z-depth-1">
         <div class="row">
           <div class="s12 m12 l8 col white columna-publicaciones">
-            <h5>Columna para las publicaciones</h5>
+            <div class="contenedor-write-publicacion card amber lighten-4">
+
+            </div>
+            <div class="contenedor-publicacion card amber lighten-4">
+
+            </div>
+            <div class="contenedor-publicacion card amber lighten-4">
+
+            </div>
           </div>
           <div class="l3 offset-l1 col white columna-news hide-on-med-and-down">
             <h5>Columna para las noticias</h5>
