--- a/FrameworksyLibreriasCSS/Materialize/IconosyNavBar/index.html
+++ b/FrameworksyLibreriasCSS/Materialize/IconosyNavBar/index.html
@@ -7,40 +7,89 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Importar la hojas de estilos de materialize css-->
     <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-    <title>Cards Chips y Collections en Materialize CSS</title>
+    <title>Icons y Nav Bar</title>
   </head>
   <body>
-    <div class="row">
-      <div class="col s6">
-        <div class="card  blue darken-4">
-          <div class="card-image waves-effect waves-block waves-light">
-            <img src="img/img1.jpg" alt="Imagen Celular" class="activator">
-          </div>
-          <div class="card-reveal">
-            <span class="card-title">Otro Titulo <i class="material-icons right">close</i></span>
-            <p>Otro texto de prueba</p>
-          </div>
-          <div class="card-content white-text">
-            <span class="card-title">Soy el Título</span>
-            <p>Soy un texto de prueba</p>
-            <div class="card-action">
-              <a href="#">Enlace 1</a>
-              <a href="#">Enlace 1</a>
-              <a href="#">Enlace 1</a>
+    <div class="navbar-fixed">
+      <nav>
+        <div class="nav-wrapper">
+          <a class="brand-logo left" href="index.html">Logo</a>
+          <ul class="hide-on-med-and-down right">
+            <li class="active"><a href="index.html"><i class="material-icons left">dashboard</i>Inicio</a></li>
+            <li><a href="productos.html"><i class="material-icons left">shopping_cart</i>Producto</a></li>
+            <li><a href="servicios.html"><i class="material-icons left">navigation</i>Servicios</a></li>
+          </ul>
+        </div>
+      </nav>
+    </div>
+
+    <div class="container">
+      <div class="row">
+        <div class="col s6">
+          <div class="card  blue darken-4">
+            <div class="card-image waves-effect waves-block waves-light">
+              <img src="img/img1.jpg" alt="Imagen Celular" class="activator">
+            </div>
+            <div class="card-reveal">
+              <span class="card-title">Otro Titulo <i class="material-icons right">close</i></span>
+              <p>Otro texto de prueba</p>
+            </div>
+            <div class="card-content white-text">
+              <span class="card-title">Soy el Título</span>
+              <p>Soy un texto de prueba</p>
+              <div class="card-action">
+                <a href="#">Enlace 1</a>
+                <a href="#">Enlace 1</a>
+                <a href="#">Enlace 1</a>
+              </div>
             </div>
           </div>
         </div>
-      </div>
-      <div class="col s6">
-        <div class="chip">
-          <img src="img/img2.jpg" alt="">
-          Hola
+        <div class="col s6">
+          <div class="chip">
+            <img src="img/img2.jpg" alt="">
+            Hola
+          </div>
+          <div class="collection with-header">
+            <h4 class="collection-header">Lista</h4>
+            <a href="#" class="collection-item">Item 1</a>
+            <a href="#" class="collection-item">Item 2</a>
+            <a href="#" class="collection-item">Item 3</a>
+          </div>
         </div>
-        <div class="collection with-header">
-          <h4 class="collection-header">Lista</h4>
-          <a href="#" class="collection-item">Item 1</a>
-          <a href="#" class="collection-item">Item 2</a>
-          <a href="#" class="collection-item">Item 3</a>
+      </div>
+      <div class="row">
+        <div class="col s6">
+          <div class="card  blue darken-4">
+            <div class="card-image waves-effect waves-block waves-light">
+              <img src="img/img1.jpg" alt="Imagen Celular" class="activator">
+            </div>
+            <div class="card-reveal">
+              <span class="card-title">Otro Titulo <i class="material-icons right">close</i></span>
+              <p>Otro texto de prueba</p>
+            </div>
+            <div class="card-content white-text">
+              <span class="card-title">Soy el Título</span>
+              <p>Soy un texto de prueba</p>
+              <div class="card-action">
+                <a href="#">Enlace 1</a>
+                <a href="#">Enlace 1</a>
+                <a href="#">Enlace 1</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col s6">
+          <div class="chip">
+            <img src="img/img2.jpg" alt="">
+            Hola
+          </div>
+          <div class="collection with-header">
+            <h4 class="collection-header">Lista</h4>
+            <a href="#" class="collection-item">Item 1</a>
+            <a href="#" class="collection-item">Item 2</a>
+            <a href="#" class="collection-item">Item 3</a>
+          </div>
         </div>
       </div>
     </div>
