--- a/FrameworksyLibreriasCSS/Materialize/BotonesyPaginacion/index.html
+++ b/FrameworksyLibreriasCSS/Materialize/BotonesyPaginacion/index.html
@@ -32,9 +32,11 @@
       <div class="row">
         <div class="col s12">
           <ul class="pagination">
-            <li class="disabled"><a class="btn-floating blue" href="#"><i class="material-icons">chevron_left</i></a></li>
-            <li><a class="btn-floating coal" href="#"><i class="material-icons">error_outline</i></a></li>
-            <li><a class="btn-floating green" href="#"><i class="material-icons">lock</i></a></li>
+            <li class="disabled"><a href="#"><i class="material-icons">chevron_left</i></a></li>
+            <li class="active"><a href="#">1</a></li>
+            <li class="waves-effect"><a href="#">2</a></li>
+            <li class="waves-effect"><a href="#">3</a></li>
+            <li class="waves-effect"><a href="#"><i class="material-icons">chevron_right</i></a></li>
           </ul>
         </div>
       </div>
