--- a/FrameworksyLibreriasCSS/Materialize/EjercComponentesMaterialize/index.html
+++ b/FrameworksyLibreriasCSS/Materialize/EjercComponentesMaterialize/index.html
@@ -13,7 +13,14 @@
 <body>
   <div class="row">
     <div class="s12 col amber darken-3 barra-superior">
-      <img src="img/browser.png" alt="ShareUrCode" class="logo"/>
+      <div class="row">
+        <div class="col s12 m8 l5 contenedor-logo-buscar">
+          <img src="img/browser.png" alt="ShareUrCode" class="logo"/>
+          <div class="">
+            <input type="text" name="" value="">
+          </div>
+        </div>
+      </div>
     </div>
     <div class="s2 m2 l2 col blue-grey lighten-5 columna-grupos push-s10">
       <span>Columna para los grupos</span>
