--- a/FrameworksyLibreriasCSS/EvaluacionFinalFrameworksCompCSS/BlogBootstrapMusica/index.html
+++ b/FrameworksyLibreriasCSS/EvaluacionFinalFrameworksCompCSS/BlogBootstrapMusica/index.html
@@ -14,13 +14,13 @@
         <div class="row">
           <header class="col-sm-12 col-md-12">
             <div class="row">
-              <div class="logo-blog col-md-6 col-lg-6"><img src="img/logo_blog.png" alt="Logo RockBlog" class="logo-rblog"></div>
+              <div class="logo-blog col-md-6 col-lg-6"><img src="img/logo_blog.png" class="logo-rblog" alt="Logo RockBlog"></div>
               <div class=" btn-group-sm redes-sociales col-md-6 col-lg-6 align-self-center">
-                <button type="button" class="btn float-right btn-light"><img id="social-logo" src="img/yout.png"></button>
-                <button type="button" class="btn float-right btn-light"><img id="social-logo" src="img/face.png"></i></button>
-                <button type="button" class="btn float-right btn-light"><img id="social-logo" src="img/insta.png"></i></button>
-                <button type="button" class="btn float-right btn-light"><img id="social-logo" src="img/pint.png"></i></button>
-                <button type="button" class="btn float-right btn-light"><img id="social-logo" src="img/twit.png"></i></button>
+                <button type="button" class="btn btn-light"><img id="social-logo" src="img/yout.png"></button>
+                <button type="button" class="btn btn-light"><img id="social-logo" src="img/face.png"></i></button>
+                <button type="button" class="btn btn-light"><img id="social-logo" src="img/insta.png"></i></button>
+                <button type="button" class="btn btn-light"><img id="social-logo" src="img/pint.png"></i></button>
+                <button type="button" class="btn btn-light"><img id="social-logo" src="img/twit.png"></i></button>
               </div>
             </div>
           </header>
@@ -59,6 +59,108 @@
             </ul>
           </div>
         </div>
-      </div>
-  </body>
+        <div class="row">
+    			<section class="col-sm-12 col-md-12 mx-auto my-4 section-central">
+    				<div class="row">
+    					<article class="contenido col-md-12 col-lg-9">
+    						<div class="row">
+
+    							<div class="col-md-8">
+    								<h5 class="mt-2 mb-1">Metallica gana el Premio Polar, considerado el Nobel de la música</h5><br>
+    									<p class=" text-justify">
+    									La banda de thrash metal estadounidense Metallica ha sido galardonada con el Premio Polar, considerado como el "Nobel de la música". "Desde la agitación emocional de Wagner y los cánones de Tchaikovski, nadie había creado música tan física y furiosa y, aun así, tan accesible", aparece destacado en el fallo publicado por la Real Academia Sueca de Música este miércoles, en el que se destaca la virtuosidad y el uso de ritmos extremadamente acelerados del grupo de San Francisco. Junto a Metallica, el jurado también ha entregado el premio al Instituto Nacional de Música Afgano (ANIM, por sus siglas en inglés) por haber usado el "poder" de la música para transformar las vidas de los jóvenes. <br><br>
+    									Metallica nació a principios de los años ochenta en la ciudad de Los Ángeles y se estableció años después en San Francisco. Su estilo y trayectoria lo sitúan como uno de los grupos más influyentes de la música en general y del heavy metal en particular. Hasta el momento, han publicado 10 álbumes de estudio entre los que destacan Kill 'Em All (1983), Master of Puppets (1986) o Metallica (conocido como Black Album por el color de su portada). El conjunto estadounidense forma parte junto a Megadeth, Slayer y Anthrax de The Big Four, las cuatro bandas que crearon e impulsaron el estilo thrash metal.nsiderado el Nobel de la música.
+    									</p>
+    							</div>
+
+    							<div class="col-md-4 mt-2 text-center">
+    								<img class="img-contenido mx-auto img-thumbnail" src="img/metal.jpg" alt="Metallica">
+    							</div>
+
+    						</div>
+
+    						<form>
+    							<div>
+    								<div class="input-group my-2">
+    									<div class="input-group-addon">
+    										<img class="img-formulario" src="img/foto_coment.png">
+    									</div>
+    									<textarea class="comentarios form-control" placeholder="Comentario..." rows="1"></textarea>
+    								</div>
+    							</div>
+    						</form>
+
+    						<div class="row mt-2">
+
+    							<div class="col-md-4 mt-2 text-center">
+    								<img class="img-contenido mx-auto img-thumbnail" src="img/vp.jpg" alt="Vinnie Paul">
+    							</div>
+
+    							<div class="col-md-8">
+    								<h5 class="mt-2 mb-1">Muere Vinnie Paul, fundador y batería de Pantera y Hellyeah</h5><br>
+    									<p class=" text-justify">
+    									Vinnie Paul, fundador y batería de Pantera, de 54 años, ha fallecido por causas que de momento no han sido reveladas, según ha comunicado la familia a través de un comunicado en Facebook, en el que no ofrece más detalles.<br><br>
+    									Vinnie Paul, cuyo verdadero nombre era Vincent Paul Abbott, se hizo famoso por la potencia de su toque de doble bombo, que llegó a dar nombre comercial a un tipo de pedal de batería. Actualmente se mantenía activo con el grupo Hellyeah.<br><br>
+    									"Vincent Paul Abbott alias Vinnie Paul ha muerto. Paul es mejor conocido por su trabajo como baterista en las bandas Pantera y Hellyeah. No hay más detalles disponibles en este momento. La familia pide que respete su privacidad durante este tiempo", reza el comunicado.<br><br>
+    									La forma de tocar de Paul, nacido el 11 de marzo de 1964 en Dallas (Texas, EE UU), ha dejado huella en el metal norteamericano, tanto por su trabajo en Pantera o Damageplan, como por sus conciertos con Hellyeah, formado por exmiembros de varios grupos, como Kyle Sanders o Christian Brady.
+    									</p>
+    							</div>
+    						</div>
+    						<form>
+    							<div>
+    								<div class="input-group my-2">
+    									<div class="input-group-addon">
+    										<img class="img-formulario" src="img/foto_coment.png">
+    									</div>
+    									<textarea class="comentarios form-control" placeholder="Comentario..." rows="1"></textarea>
+    								</div>
+    							</div>
+    						</form>
+    					</article>
+
+    					<aside class="busqueda col-md-0 col-lg-3">
+
+    						<div class="row mr-1">
+    							<div class="buscador card col-md-12 my-2">
+    								<form class="buscador form-inline">
+    									<div>
+    										<div class="input-group my-2">
+    											<div class="input-group-addon">
+												   <img class="img-formulario" src="img/lupa.png">
+											    </div>
+    											<input class="form-control" type="text" placeholder="Buscar">
+    										</div>
+    									</div>
+    								</form>
+    							</div>
+    						</div>
+
+    						<div class="row mr-1">
+    							<div class="opciones-busqueda card col-md-12 my-2">
+    								<ul class="list-group list-group-flush my-2">
+    									<li class="list-group-item">
+    										<a class="nav-link" href="#">Metallica gana el Premio Polar, considerado el Nobel de la música</a>
+    									</li>
+    									<li class="list-group-item">
+    										<a class="nav-link" href="#">Muere Vinnie Paul, fundador y batería de Pantera y Hellyeah"</a>
+    									</li>
+                      <li class="list-group-item">
+    										<a class="nav-link" href="#">La 'espeluznante' historia de Eddie, la mascota de Iron Maiden</a>
+    									</li>
+    									<li class="list-group-item">
+    										<a class="nav-link" href="#">Sepultura iniciará gira europea en Alemania para 2018"</a>
+    									</li>
+    								</ul>
+    							</div>
+    						</div>
+
+    					</aside>
+
+    				</div>
+    			</section>
+    		</div>
+
+		    <footer></footer>
+	   </div>
+	</body>
 </html>
