--- a/FrameworksyLibreriasCSS/EvaluacionFinalFrameworksCompCSS/BlogBootstrapMusica/index.html
+++ b/FrameworksyLibreriasCSS/EvaluacionFinalFrameworksCompCSS/BlogBootstrapMusica/index.html
@@ -6,6 +6,7 @@
       <meta name='mobile-web-app-capable' content='yes'>
       <link rel='stylesheet' href='css/bootstrap.min.css'>
       <link rel='stylesheet' href='css/style.css'>
+      <link rel="shortcut icon" type="image/x-icon" href="img/fav.png">
       <script src='js/bootstrap.min.js'></script>
       <title>RockBlog</title>
     </head>
