--- a/FrameworksyLibreriasCSS/EvaluacionFinalFrameworksCompCSS/BlogFoundationGastronomia/index.html
+++ b/FrameworksyLibreriasCSS/EvaluacionFinalFrameworksCompCSS/BlogFoundationGastronomia/index.html
@@ -15,14 +15,67 @@
   			<header class="column medium-12 large-12 hide-for-small-only encabezado padding-vertical-1">
   				<div class="row">
   					<div class="column small-4" id="header">
-  						<div class="nombre"><h4>El Blog del Comelón</h4></div>
+  						<div class="titulo"><h3>El Blog del Comelón</h3></div>
   						<div class="slogan"><strong>Degustando<br>  de la buena mesa</strong></div>
   					</div>
   				</div>
   			</header>
 			</div>
 
+      <div class="row contenedor-secciones">
 
+  			<section class="column medium-5 large-4 hide-for-small-only margin-top-1">
+
+  				<aside class="card padding-1" id="busqueda" style="color: #331900">
+
+  					<form class="buscador">
+  						<div class="input-group">
+  							<input class="form-control" type="text">
+  							<div class="">
+  								<button type="submit" class="alert button fi-magnifying-glass"></button>
+  							</div>
+  						</div>
+  					</form>
+
+  					<nav>
+  						<ul class="vertical menu align-center">
+  							<li><a class="hollow button expanded alert" href="#">Inicio</a></li>
+  							<li><a class="hollow button expanded alert" href="#">El mejor condimento</a></li>
+  							<li><a class="hollow button expanded alert" href="#">Mis recetas</a></li>
+  						</ul>
+  					</nav>
+  					<br>
+
+  					<div>
+  						<legend>Favoritos:</legend>
+  						<div class="row margin-bottom-0">
+  							<div class="column small-4"><a href=""><img src="img/oreja.jpg" class="thumbnail"></a></div>
+  							<div class="column small-4"><a href=""><img src="img/pizza.jpg" class="thumbnail"></a></div>
+  							<div class="column small-4"><a href=""><img src="img/waffe.jpg" class="thumbnail"></a></div>
+  						</div>
+  						<br>
+  						<div class="row margin-top-0">
+  							<div class="column small-4"><a href=""><img src="img/cafe_cake.jpg" class="thumbnail"></a></div>
+  							<div class="column small-4"><a href=""><img src="img/bombon.jpg" class="thumbnail"></a></div>
+  							<div class="column small-4"><a href=""><img src="img/arepa.jpg" class="thumbnail"></a></div>
+  						</div>
+  					</div>
+  					<br>
+
+  					<div>
+  						<legend>Historial:</legend>
+  						<ul class="vertical menu">
+  							<li><a href="#" style="color: #663100">Ossobuco</a></li>
+  							<li><a href="#" style="color: #663100">Bollito de Maíz</a></li>
+  							<li><a href="#" style="color: #663100">Waffle de Nuttela</a></li>
+                <li><a href="#" style="color: #663100">Orejitas Dulces</a></li>
+  						</ul>
+  					</div>
+
+  				</aside>
+
+  			</section >
+      </div>
     </div>
 
     <script src="js/jquery.js"></script>
